--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4a90e2</color>
+    <color name="colorPrimaryDark">#4786cf</color>
+    <color name="colorAccent">#000</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="text_color_hint">#c5c5c5</color>
+    <color name="bg_color">#f7f7f7</color>
+    <color name="tab_normal">#4a90e2</color>
+    <color name="tab_selected">#4786cf</color>
 </resources>
