- Adição da biblioteca Calligraphy para poder aplicar um padrão de fonte para todo o app - Adição das classes para salvar o SharedPreferences com o objetivo de mudar da tela de Contato para Sucesso e vice versa - Criação do BaseFragment para poder ser extendido por Fragments que possuem comportamentos em comum - Adição de outras validações - Adição do FragmentSucesso

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="bg_color">#f7f7f7</color>
     <color name="tab_normal">#4a90e2</color>
     <color name="tab_selected">#4786cf</color>
+    <color name="valid_field">#78c54a</color>
+    <color name="error_field">#ff3d3d</color>
+    <color name="obrigado">#909090</color>
 </resources>
